--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           l na década de 1930. Após a Segunda Guerra Mundial, tornou-se d
           iretor do Instituto de Estudos Avançados em Princeton, Nova Jér
           sei.</p>
-    <img class="custom-image" src="C:\Users\denko\Downloads\mk1.jpg" alt="eae meu brother">
+    <img class="custom-image" src="https://imgs.search.brave.com/7DgQkBTxaNII2-WysoBKagTUYBUGATRV7BkJWffIhcs/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5nZXR0eWltYWdl/cy5jb20vaWQvOTY3/NDY3NjA4L3B0L2Zv/dG8vbWsyLXZvbGtz/d2FnZW4tamV0dGEu/anBnP3M9MTAyNHgx/MDI0Jnc9Z2kmaz0y/MCZjPUJIejd2MTdi/V2lxQlBBWVZQNTJH/Mi03RFRsaHAwN0Vt/STJjSE9HQk0yLUU9.jpg" alt="eae meu brother">
   
 </body>
 </html>
