--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             width: 500px;
             height: auto;
         }
+<img SPC="https://www.google.com/search?client=ms-android-samsung-gj-rev1&sca_esv=556828901&sxsrf=AB5stBhdoJyIGEn4Sryus1wcUsxkwVu2Jg:1692037117129&q=foto+zoio&tbm=isch&source=lnms&sa=X&ved=2ahUKEwiHsMC64dyAAxULq5UCHRzNBp4Q0pQJegQIChAB&biw=412&bih=734&dpr=1.75#imgrc=CJnQ6VlSHs2e7M">
 
+        
     </style>
 </head>
 <body>
